--- a/example/style.css
+++ b/example/style.css
@@ -15,6 +15,7 @@ html, body {
     bottom: 0;
     width: 100%;
     height: 150px;
+    z-index: 20;
     
     -webkit-box-shadow: 0 -1px 15px rgba(0,0,0, 0.2);
     box-shadow: 0 -1px 15px rgba(0,0,0, 0.2);
